Clean dirty branch?

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,8 +1,17 @@
 body {
-    padding: 50px;
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  }
-  
-  a {
-    color: #00B7FF;
-  }
+  padding: 50px;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+a {
+  color: #00B7FF;
+}
+
+h3 {
+  font: 18px;
+}
+
+.some-padding {
+  margin: 40px;
+  padding: 40px;
+}
