--- a/views/wikipage.html
+++ b/views/wikipage.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-  <h3><small> (<a href="PLACEHOLDER_URL_TITLE/similar">{{page.title}}</a>)</small></h3>
+  <div class="some-padding"><h3><small> (<a href="PLACEHOLDER_URL_TITLE/similar">{{page.title}}</a>)</small></h3></div>
   <h4>by <a href="PLACEHOLDER-AUTHOR-URL">PLACEHOLDER AUTHOR NAME</a></h4>
   <div>PLACEHOLDER TAG LIST {{page.title}}</div>
   <hr/>
